[tool.poetry]
name = "series-temporais-mlforecast"
version = "0.1.0"
description = ""
authors = ["VanGaigher <vanessa.mat.sedu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
ipykernel = "^6.29.5"
mlforecast = "^1.0.1"
matplotlib = "^3.10.0"
numba = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
